results/securify2/bad_randomness_etheraffle.error.txt
WARNING: The requested image's platform (linux/amd64) does not match the detected host platform (linux/arm64/v8) and no specific platform was requested
Traceback (most recent call last):
  File "securify/__main__.py", line 286, in <module>
    main()
  File "securify/__main__.py", line 277, in main
    matches.extend(pattern.find_matches())
  File "/sec/securify/analyses/patterns/static/static_analysis_patterns.py", line 73, in find_matches
    static = analysis_context.static_analysis
  File "/sec/securify/analyses/analysis.py", line 88, in static_analysis
    self._static = self.config.static_analysis(self)
  File "securify/__main__.py", line 255, in <lambda>
    static_analysis=lambda t: static_analysis.analyze_cfg(t.cfg, **souffle_config),
  File "/sec/securify/analyses/analysis.py", line 81, in cfg
    self._cfg = self.config.cfg_compiler(self)
  File "securify/__main__.py", line 254, in <lambda>
    cfg_compiler=lambda t: solidity_cfg_compiler.compile_cfg(t.ast).cfg,
  File "/sec/securify/analyses/analysis.py", line 74, in ast
    self._ast = self.config.ast_compiler(self)
  File "securify/__main__.py", line 253, in <lambda>
    ast_compiler=lambda t: solidity_ast_compiler.compile_ast(t.source_file),
  File "/sec/securify/solidity/solidity_ast_compiler.py", line 31, in compile_ast
    compile_output = compile_standard(compile_input, allow_paths='/')
  File "/usr/local/lib/python3.7/dist-packages/py_solc-3.2.0-py3.7.egg/solc/main.py", line 181, in compile_standard
    message=error_message,
solc.exceptions.SolcError: fixed_pragma.sol:55:5: SyntaxError: Functions are not allowed to have the same name as the contract. If you intend this to be a constructor, use "constructor(...) { ... }" to define it.
    function Ethraffle_v4b() public {
    ^ (Relevant source part starts here and spans across multiple lines).

fixed_pragma.sol:60:5: TypeError: Fallback function must be defined as "external".
    function () payable public {
    ^ (Relevant source part starts here and spans across multiple lines).

fixed_pragma.sol:82:13: TypeError: Event invocations have to be prefixed by "emit".
            TicketPurchase(raffleId, msg.sender, currTicket);
            ^----------------------------------------------^

fixed_pragma.sol:104:28: TypeError: Wrong argument count for function call: 3 arguments given but expected 1. This function requires a single bytes argument. Use abi.encodePacked(...) to obtain the pre-0.5.0 behaviour or abi.encode(...) to use ABI encoding.
        bytes32 randHash = keccak256(seed1, seed2, seed3);
                           ^----------------------------^

fixed_pragma.sol:108:9: TypeError: Event invocations have to be prefixed by "emit".
        RaffleResult(raffleId, winningNumber, winningAddress, seed1, seed2, seed3, randHash);
        ^----------------------------------------------------------------------------------^

fixed_pragma.sol:121:9: TypeError: "send" and "transfer" are only available for objects of type "address payable", not "address".
        winningAddress.transfer(prize);
        ^---------------------^

        > command: `solc --allow-paths / --standard-json`
        > return code: `0`
        > stderr:
        {"errors":[{"component":"general","formattedMessage":"fixed_pragma.sol:55:5: SyntaxError: Functions are not allowed to have the same name as the contract. If you intend this to be a constructor, use \"constructor(...) { ... }\" to define it.\n    function Ethraffle_v4b() public {\n    ^ (Relevant source part starts here and spans across multiple lines).\n","message":"Functions are not allowed to have the same name as the contract. If you intend this to be a constructor, use \"constructor(...) { ... }\" to define it.","severity":"error","sourceLocation":{"end":1445,"file":"fixed_pragma.sol","start":1373},"type":"SyntaxError"},{"component":"general","formattedMessage":"fixed_pragma.sol:55:5: Warning: This declaration shadows an existing declaration.\n    function Ethraffle_v4b() public {\n    ^ (Relevant source part starts here and spans across multiple lines).\nfixed_pragma.sol:10:1: The shadowed declaration is here:\ncontract Ethraffle_v4b {\n^ (Relevant source part starts here and spans across multiple lines).\n","message":"This declaration shadows an existing declaration.","secondarySourceLocations":[{"end":5067,"file":"fixed_pragma.sol","message":"The shadowed declaration is here:","start":290}],"severity":"warning","sourceLocation":{"end":1445,"file":"fixed_pragma.sol","start":1373},"type":"Warning"},{"component":"general","formattedMessage":"fixed_pragma.sol:60:5: TypeError: Fallback function must be defined as \"external\".\n    function () payable public {\n    ^ (Relevant source part starts here and spans across multiple lines).\n","message":"Fallback function must be defined as \"external\".","severity":"error","sourceLocation":{"end":1572,"file":"fixed_pragma.sol","start":1516},"type":"TypeError"},{"component":"general","formattedMessage":"fixed_pragma.sol:82:13: TypeError: Event invocations have to be prefixed by \"emit\".\n            TicketPurchase(raffleId, msg.sender, currTicket);\n            ^----------------------------------------------^\n","message":"Event invocations have to be prefixed by \"emit\".","severity":"error","sourceLocation":{"end":2186,"file":"fixed_pragma.sol","start":2138},"type":"TypeError"},{"component":"general","formattedMessage":"fixed_pragma.sol:104:28: TypeError: Wrong argument count for function call: 3 arguments given but expected 1. This function requires a single bytes argument. Use abi.encodePacked(...) to obtain the pre-0.5.0 behaviour or abi.encode(...) to use ABI encoding.\n        bytes32 randHash = keccak256(seed1, seed2, seed3);\n                           ^----------------------------^\n","message":"Wrong argument count for function call: 3 arguments given but expected 1. This function requires a single bytes argument. Use abi.encodePacked(...) to obtain the pre-0.5.0 behaviour or abi.encode(...) to use ABI encoding.","severity":"error","sourceLocation":{"end":2910,"file":"fixed_pragma.sol","start":2880},"type":"TypeError"},{"component":"general","formattedMessage":"fixed_pragma.sol:108:9: TypeError: Event invocations have to be prefixed by \"emit\".\n        RaffleResult(raffleId, winningNumber, winningAddress, seed1, seed2, seed3, randHash);\n        ^----------------------------------------------------------------------------------^\n","message":"Event invocations have to be prefixed by \"emit\".","severity":"error","sourceLocation":{"end":3131,"file":"fixed_pragma.sol","start":3047},"type":"TypeError"},{"component":"general","formattedMessage":"fixed_pragma.sol:121:9: TypeError: \"send\" and \"transfer\" are only available for objects of type \"address payable\", not \"address\".\n        winningAddress.transfer(prize);\n        ^---------------------^\n","message":"\"send\" and \"transfer\" are only available for objects of type \"address payable\", not \"address\".","severity":"error","sourceLocation":{"end":3498,"file":"fixed_pragma.sol","start":3475},"type":"TypeError"}],"sources":{}}

        > stdout:
